# crimson-dahlia

./: .gitignore  README.md  index.html  package-lock.json
backend/: IMPLEMENTATION.md  README.md  app.py  example_usage.py  pyproject.toml  requirements.txt  test_models.py
backend/models/: __init__.py  application.py  post.py  task.py  user.py
backend/routes/: applications.py  posts.py  tasks.py  users.py
docs/: 1.getting-started.md  2.branching-workflow.md  3.frontend_structure.md
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  fonts.css  index.css  main.jsx
frontend/src/components/: CommunityAid.css  CommunityAid.jsx  CreateAccount.css  CreateAccount.jsx  HelpRequest.jsx  Login.css  Login.jsx  MyApplications.jsx  MyTasks.css  MyTasks.jsx  Profile.jsx  dashboard.css  dashboard.jsx  profile.css
frontend/src/context/: AuthProvider.jsx
frontend/src/functions/: handleCreateAccount.js  handleLogin.js
frontend/src/util/: deleteProfile.js  getProfile.js  handleCreateAccount.js  handleLogin.js  updateProfile.js
